# obsidian-mobile-debug

./: .gitignore  LICENSE  README.md  android_cdp.py  android_setup.sh  android_teardown.sh  android_waypoint_validate.py  obsidian_mobile_debug.py  provider_matrix.py  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  afc_discover.py  android_dl_monitor.py  android_timed_download.py  obsidian_inspect_demo.py  podnotes_ios.py
src/obsidian_mobile_debug/: __init__.py  android.py  android_setup.py  cli.py  console_fmt.py  ios.py  lock.py  probes.py  provision.py  verify.py
src/obsidian_mobile_debug/probes/: core_smoke.js
tests/: test_android.py  test_android_setup.py  test_cli.py  test_console_fmt.py  test_ios.py  test_lock.py  test_probes.py  test_provision.py  test_verify.py
